# setuptools_scm_git_semver

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
setuptools_scm_git_semver/: __init__.py  git.py
tests/: test_integration.py  test_parsers.py  test_schemes.py
