[build-system]
requires = [
    "setuptools >= 53",
    "wheel >= 0.37.0",
    "setuptools_scm",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
# This section needs to exist, but we don't need to set anything at the moment

[tool.mypy]
namespace_packages = true
ignore_missing_imports = false
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "setuptools_scm.*",
    "pytest",
]
ignore_missing_imports = true
