[metadata]
name = setuptools_scm_git_semver
description = SemVer-compatible plugin for setuptools_scm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudreach/setuptools_scm_git_semver
author = Cloudreach Software Team Ops Management
author_email = sw-team-ops-management@cloudreach.com
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    setuptools_scm >= 6.3.1
python_requires = >= 3.6

[options.packages.find]
exclude = tests

[options.entry_points]
setuptools_scm.version_scheme =
    guess-next-rc = setuptools_scm_git_semver:guess_next_rc
setuptools_scm.local_scheme =
    time-dot-node = setuptools_scm_git_semver:local_time_dot_node
